hard-gists/47e1d07b136c316bfb33c880ca910e8c/run.log
=== Docker Run Log for 47e1d07b136c316bfb33c880ca910e8c ===
Started at: Mi 29. Okt 15:01:31 CET 2025

[2025-10-29 15:01:32] START: Running container for 47e1d07b136c316bfb33c880ca910e8c
[2025-10-29 15:01:32] SUCCESS: Container 5a08a94b0c5c5d31d754479458fc2f67bdd16fa907825a52b3247914cc3b4238 started for 47e1d07b136c316bfb33c880ca910e8c
=== Container logs for 47e1d07b136c316bfb33c880ca910e8c ===
  File "/snippet.py", line 41
    print output.stderr
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 47e1d07b136c316bfb33c880ca910e8c ===
[2025-10-29 15:01:34] INFO: Container 5a08a94b0c5c5d31d754479458fc2f67bdd16fa907825a52b3247914cc3b4238 has stopped
